RESOLVED FIXED294219
REGRESSION (293295@main): Missing UI in Logic Pro UAD plugins
https://bugs.webkit.org/show_bug.cgi?id=294219
Summary REGRESSION (293295@main): Missing UI in Logic Pro UAD plugins
Simon Fraser (smfr)
Reported 2025-06-09 14:12:20 PDT
After 293295@main, the UAD plugins[1] in Logic Pro have missing UI. [1] https://www.uaudio.com/products/polymax-synth
Attachments
Simon Fraser (smfr)
Comment 1 2025-06-09 14:12:32 PDT
Simon Fraser (smfr)
Comment 2 2025-06-09 14:14:43 PDT
Sam Weinig
Comment 3 2025-06-10 14:31:40 PDT
EWS
Comment 4 2025-06-10 21:14:38 PDT
Committed 296076@main (ac7bad8bf152): <https://commits.webkit.org/296076@main> Reviewed commits have been landed. Closing PR #46569 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.