REGRESSION (293295@main): Missing UI in Logic Pro UAD plugins https://bugs.webkit.org/show_bug.cgi?id=294219

Reviewed by Wenson Hsieh.

When parsing CSS URL values, treat a base URL of about:blank, implicitly used
for templates, the same as a null base URL. This allows late re-resolving of
the URL value at style building time, which will happen after the template is
cloned and instantiated.

* LayoutTests/fast/css/relative-url-in-style-in-template-expected.txt: Added.
* LayoutTests/fast/css/relative-url-in-style-in-template.html: Added.
* Source/WebCore/css/values/primitives/CSSURL.cpp:
(WebCore::CSS::completeURL):

Canonical link: https://commits.webkit.org/296076@main